k8s/manifest/auth/authentik-outpost.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-outpost
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-outpost
  template:
    metadata:
      labels:
        app: authentik-outpost
    spec:
      containers:
        - name: proxy
          image: ghcr.io/goauthentik/proxy:2026.2.3
          ports:
            - containerPort: 9000
            - containerPort: 9443

---
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost
  namespace: apps
spec:
  selector:
    app: authentik-outpost
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: https
      port: 9443
      targetPort: 9443
